k8s.yaml
# api
# apiVersion: v1
# kind: Service
# metadata:
#   name: api
#   labels:
#     app: api
#     service: api
#     type: external
# spec:
#   ports:
#   - port: 80
#     targetPort: 8080
#     name: http
#   selector:
#     type: external
# ---
# Order
apiVersion: v1
kind: Service
metadata:
  name: order
  labels:
    app: order
    service: order
spec:
  ports:
  - port: 80
    targetPort: 8080
    name: http
  selector:
    app: order
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-v1
  labels:
    app: order
    type: external
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order
      version: v1
  template:
    metadata:
      labels:
        app: order
        version: v1
    spec:
      containers:
      - name: order
        image: jk82421/order:v1
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        securityContext:
          runAsUser: 1000
---

# consumer
apiVersion: v1
kind: Service
metadata:
  name: consumer
  labels:
    app: consumer
    service: consumer
spec:
  ports:
  - port: 80
    targetPort: 8070
    name: http
  selector:
    app: consumer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: consumer-v1
  labels:
    app: consumer
    version: v1
    type: external
spec:
  replicas: 1
  selector:
    matchLabels:
      app: consumer
      version: v1
  template:
    metadata:
      labels:
        app: consumer
        version: v1
    spec:
      containers:
      - name: consumer
        image: jk82421/consumer:v1
        imagePullPolicy: Always
        ports:
        - containerPort: 8070
        securityContext:
          runAsUser: 1000
---
