kafka.yaml
# Kafka
apiVersion: v1
kind: Service
metadata:
  name: kafka
  labels:
    app: kafka
    service: kafka
spec:
  ports:
  - port: 9092
    targetPort: 9092
    name: tcp
    protocol: TCP
  selector:
    app: kafka
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka
  labels:
    app: kafka
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka
  template:
    metadata:
      labels:
        app: kafka
    spec:
      containers:
      - name: kafka
        image: bitnami/kafka:latest
        ports:
        - containerPort: 9092
        securityContext:
          runAsUser: 1001
---
# Zookeeper
apiVersion: v1
kind: Service
metadata:
  name: zookeeper
  labels:
    app: zookeeper
    service: zookeeper
spec:
  ports:
  - port: 2181
    targetPort: 2181
    name: tcp
    protocol: TCP
  selector:
    app: zookeeper
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zookeeper
  labels:
    app: zookeeper
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zookeeper
  template:
    metadata:
      labels:
        app: zookeeper
    spec:
      containers:
      - name: zookeeper
        image: bitnami/zookeeper:latest
        ports:
        - containerPort: 2181
        securityContext:
          runAsUser: 1001
---
