istio.yaml
#
#
# VirtualService
#
# 
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: order
spec:
  hosts:
  - order
  http:
  - route:
    - destination:
        host: order
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: consumer
spec:
  hosts:
    - consumer
  http:
  - route:
    - destination:
        host: consumer
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: gateway-for-external
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "api.com"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: api
spec:
  hosts:
    - "api.com"
  gateways:
  - gateway-for-external
  http:
  - match:
    - uri: 
        prefix: "/order/health"
    rewrite:
      uri: "/health"
    route:
    - destination:
        host: order
  - match:
    - uri: 
        prefix: "/consumer/health"
    rewrite:
      uri: "/health"
    route:
    - destination:
        host: consumer
  - match:
    - uri: 
        prefix: "/order"
    route:
    - destination:
        host: order
  - match:
    - uri: 
        prefix: "/consumer"
    route:
    - destination:
        host: consumer
---


#
#
# DestinationRule
#
# 
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: order
spec:
  host: order
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: consumer
spec:
  host: consumer
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: api
spec:
  host: api
---
